tests/error/12.program
{
    a = 0;
    b = 4 / a;
    c = 5 % a;
}